# market-data-pipeline

./: .gitignore  README.md  pipeline.py  pyproject.toml
data_ingestion/: fetch_prices.py  symbols.py
data_validation/: checks.py
market_data_pipeline/: README.md  __init__.py  config.yaml  pipeline.py  requirements.txt
market_data_pipeline/storage/: write_csv.py
storage/: write_parquet.py
